welcome.lessons.welcome.variables.Variables.scala.error
Variables:4: error: value =+ is not a member of Int
	x=+1;
         ^Variables:9: error: value =- is not a member of Int
	x=-1;
         ^