welcome.lessons.welcome.variables.Variables.scala.code
var x=0
while ((estSurBiscuit()==false)&&(porteBiscuit()==false)){
	avance();
	x=+1;
}
prendBiscuit();
while (x!=0){
	recule();
	x=-1;
}
poseBiscuit();